in process + new page: Summary ... n sich

--- a/src/pages/edit-report/edit-report.html
+++ b/src/pages/edit-report/edit-report.html
@@ -1,9 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-navbar>
 	    <ion-buttons start>
 	      <button ion-button icon-only (click)="goBack()">
-	        <ion-icon name="ion-android-arrow-back"></ion-icon>
+	        <ion-icon name="home"></ion-icon>
 	      </button>
 	    </ion-buttons>
     	<ion-title>{{title}}</ion-title>
@@ -12,7 +11,6 @@
 	        <ion-icon name="ios-trash-outline"></ion-icon>
 	      </button>
 	    </ion-buttons>
-	  </ion-navbar>
   </ion-toolbar>
 </ion-header>
 
