--- a/src/pages/hrs-summary/hrs-summary.html
+++ b/src/pages/hrs-summary/hrs-summary.html
@@ -7,9 +7,9 @@
 	    </ion-buttons>
     	<ion-title>{{title}}</ion-title>
 	    <ion-buttons end>
-	      <button ion-button icon-only (click)="deleteWorkOrder(workOrder)">
-	        <ion-icon name="ios-trash-outline"></ion-icon>
-	      </button>
+      <button ion-button color="light" icon-only (click)="terminateApp()">
+        <ion-icon name="close" ></ion-icon>
+      </button>
 	    </ion-buttons>
   </ion-toolbar>
 </ion-header>
