--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,6 +14,9 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding *ngIf="showPage" class="header-exists">
-  <button ion-button block color="secondary" *ngIf="!userLoggedIn" (click)="onLogin()" > Login </button>
+<ion-content padding>
+  Fucking believe it.
+  <p>
+    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+  </p>
 </ion-content>
