--- a/src/pages/work-order/work-order.html
+++ b/src/pages/work-order/work-order.html
@@ -11,17 +11,17 @@
 </ion-header>
 
 <ion-content padding>
-  <!--<p class="hdrDate"> Today: <span class="date">{{ setDate | date:'EEE, MMM dd yyyy'}}</span>, Time: <span class="time"> {{setDate| date:'HH:mm'}} </span></p>-->
   <div class="data-elements" *ngIf="dataReady">
-    <p class="hdrDate">
-      <span class="shift_hours_header" *ngIf="workOrderForm && workOrderForm.value && workOrderForm.value.selected_shift"><span class="shift-label">Shift <span class="shift-number">{{workOrderForm.value.selected_shift.updateShiftNumber()}}</span> hours</span>:
+    <div class="work-order-payroll-hours-header">
+      <span class="shift-hours-header" *ngIf="workOrderForm && workOrderForm.value && workOrderForm.value.selected_shift"><span class="shift-label">Shift #<span class="shift-number">{{workOrderForm.value.selected_shift.updateShiftNumber()}}</span> hours</span>:
       <span class="shift-hours">{{getTotalHoursForShift()}}</span></span>
-    </p>
+    </div>
     <form [formGroup]="workOrderForm" (ngSubmit)="onSubmit()" *ngIf="dataReady">
-      <ion-list>
-        <ion-item (click)="showFancySelect()">
+      <ion-list inset padding>
+        <ion-item (click)="showFancySelect()" class="item item-button ion-item-button-like">
           <ion-label>Shift Date</ion-label>
           <ion-input #shiftDateResults [disabled]="shiftDateInputDisabled" class="shift-date-select-results" [value]="selectedShiftText"></ion-input>
+          <ion-icon item-right class="shift-date-select-icon" name="arrow-down"></ion-icon>
         </ion-item>
         <ion-item>
           <ion-label>Repair Time</ion-label>
@@ -44,7 +44,7 @@
         </ion-item>
       </ion-list>
       <button type="submit" ion-button block color="favorite">Submit {{title}} </button>
-      <button type="button" ion-button block color="light">Cancel</button>
+      <button type="button" ion-button block color="light" (click)="cancel()">Cancel</button>
     </form>
   </div>
 </ion-content>
