--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -45,6 +45,7 @@
        <span class="chk-box-icon" [class.hrsCompleted]="chkBxBool">{{ chkBx }}</span>
     </p>
     <h6> Hrs submitted for this payroll period: {{ totHrs }} </h6>
+    <h6> Payroll hours for this payroll period: {{ pyrlHrs }} </h6>
     <p>
       Shifts are numbered 1 through 7: Wednesday = Shift 1, Tuesday = Shift 2 etc. Every payroll period has 7 shifts.
       If you do not work a shift, that shift still exists and you will have "0" hours for that shift.
@@ -53,5 +54,11 @@
       If submitted hours are not equal to shift hours, that is not necessarily bad.  The most important number(s) are the number
       of hours you worked and your total number of hours for the pay period (Wednesday through Tuesday of shifts 1 through 7).
       The number of hours submitted is the total of all shift hour submitted and this is what will be used to calculate the hours in your paycheck.
+      Payroll Hours are the hours calculated from your hours submitted.  This is the number of hours you should be paid for in your paycheck.
+      However, payroll hours displayed here are unverified hours.  If you made a mistake and submitted too many hours, then do not expect to see
+      all of those hours on your paycheck.  If you submitted too few hours, it is your responsibility to correct this by submitting the
+      appropriate work reports.  Too few hours does not trigger a flag; too many hours will trigger a flag for your submitted hours.
+      It is your responsibility to make sure you document all hours worked.  The hours you see on this screen will be the hours you are paid for
+      unless the hours are flagged for being too many.
     </p>
 </ion-content>
