--- a/src/pages/work-order/work-order.html
+++ b/src/pages/work-order/work-order.html
@@ -13,15 +13,17 @@
 <ion-content padding>
   <div class="data-elements" *ngIf="dataReady">
     <div class="work-order-payroll-hours-header">
-      <span class="shift-hours-header" *ngIf="workOrderForm && workOrderForm.value && workOrderForm.value.selected_shift"><span class="shift-label">Shift #<span class="shift-number">{{workOrderForm.value.selected_shift.updateShiftNumber()}}</span> hours</span>:
-      <span class="shift-hours">{{getTotalHoursForShift()}}</span></span>
+      <span class="shift-hours-header" *ngIf="workOrderForm && workOrderForm.value && workOrderForm.value.selected_shift">
+        <span class="shift-label">Shift #<span class="shift-number">{{workOrderForm.value.selected_shift.updateShiftNumber()}}</span> hours</span>:
+        <span class="shift-hours">{{shiftTotalHours}}</span>
+      </span>
     </div>
     <form [formGroup]="workOrderForm" (ngSubmit)="onSubmit()" *ngIf="dataReady">
       <ion-list inset padding>
         <ion-item (click)="showFancySelect()" class="item item-button ion-item-button-like">
           <ion-label>Shift Date</ion-label>
           <ion-input #shiftDateResults [disabled]="shiftDateInputDisabled" class="shift-date-select-results" [value]="selectedShiftText"></ion-input>
-          <ion-icon item-right class="shift-date-select-icon" name="arrow-down"></ion-icon>
+          <ion-icon item-right class="shift-date-select-icon" name="arrow-dropdown"></ion-icon>
         </ion-item>
         <ion-item>
           <ion-label>Repair Time</ion-label>
