--- a/src/pages/work-order/work-order.html
+++ b/src/pages/work-order/work-order.html
@@ -14,12 +14,16 @@
   <div class="data-elements" *ngIf="dataReady">
     <div class="work-order-payroll-hours-header">
       <span class="shift-hours-header" *ngIf="workOrderForm && workOrderForm.value && workOrderForm.value.selected_shift">
-        <span class="shift-label">Shift #<span class="shift-number">{{workOrderForm.value.selected_shift.updateShiftNumber()}}</span> hours</span>:
-        <span class="shift-hours">{{shiftTotalHours}}</span>
+        <span class="payroll-week-label">Week</span>
+        <span class="payroll-week-number">{{workOrderForm.value.selected_shift.getExcelDates().shift_week}}</span>
+        <span class="shift-label">Shift</span> #
+        <span class="shift-number">{{workOrderForm.value.selected_shift.updateShiftNumber()}}</span>
+        <span class="shift-label">hours</span>:
+        <span class="shift-hours">{{workOrderForm.value.selected_shift.getShiftHours()+currentRepairHours}}</span>
       </span>
     </div>
     <form [formGroup]="workOrderForm" (ngSubmit)="onSubmit()" *ngIf="dataReady">
-      <ion-list inset padding>
+      <ion-list padding>
         <ion-item (click)="showFancySelect()" class="item item-button ion-item-button-like">
           <ion-label>Shift Date</ion-label>
           <ion-input #shiftDateResults [disabled]="shiftDateInputDisabled" class="shift-date-select-results" [value]="selectedShiftText"></ion-input>
@@ -27,7 +31,8 @@
         </ion-item>
         <ion-item>
           <ion-label>Repair Time</ion-label>
-          <ion-input type='text' formControlName='repair_time'></ion-input>
+          <ion-multi-picker item-content [multiPickerColumns]="chooseHours" [separator]="':'" formControlName='repair_time'></ion-multi-picker>
+          <!--<ion-input type='text' formControlName='repair_time'></ion-input>-->
         </ion-item>
         <ion-item>
           <ion-label floating>UNIT No.</ion-label>
