--- a/src/pages/developer/developer.html
+++ b/src/pages/developer/developer.html
@@ -22,6 +22,12 @@
       <ion-toggle checked="GeolocStatus" [(ngModel)]="geolocToggle" (ionChange)="toggleBackgroundGeolocation()"></ion-toggle>
     </ion-item>
   </ion-item-group>
+  <ion-item-group>
+    <ion-item-divider color="light">Time Stamp Test</ion-item-divider>
+    <button ion-button (click)="timeStamp()"> Get Time Stamp</button>
+    <ion-item>
+      {{onSiteTimeStamp}}
+    </ion-item>
+  </ion-item-group>
 
 </ion-content>
-
