I'll never leave some for anyone! NEVER! YARR! I BE A PIRATE! OK that's enough.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -47,7 +47,7 @@
        <span class="chk-box-icon" [class.hrsCompleted]="chkBxBool">{{ chkBx }}</span>
     </p>-->
   <h6> Hrs submitted for this payroll period: {{ payrollPeriodHours }} </h6>
-  <h6> Payroll hours for this payroll period: {{ payrollPeriodHoursTotal }} </h6>
+  <h6> Payroll hours for this payroll period: {{ payrollPeriodBonusHours }} </h6>
   <p>
     Shifts are numbered 1 through 7: Wednesday = Shift 1, Tuesday = Shift 2 etc. Every payroll period has 7 shifts. If you do not work a shift, that shift still exists and you will have "0" hours for that shift. A green checkbox will be displayed at the end
     of the shifts above when the hours in the work orders you have submitted for that shift are equal to the number of hours you should have worked for that shift. <br/> If submitted hours are not equal to shift hours, that is not necessarily bad.
