--- a/src/pages/developer/developer.html
+++ b/src/pages/developer/developer.html
@@ -21,6 +21,27 @@
       <ion-label>Background Geolocation</ion-label>
       <ion-toggle checked="GeolocStatus" [(ngModel)]="geolocToggle" (ionChange)="toggleBackgroundGeolocation()"></ion-toggle>
     </ion-item>
+    <ion-item>
+      <ion-label>Test Databases</ion-label>
+      <ion-toggle checked="testDatabases" [(ngModel)]="testDatabases" (ionChange)="checkTestDatabase()"></ion-toggle>
+    </ion-item>
+    <ion-item-group>
+      <ion-item-divider color="light">Server Parameters</ion-item-divider>
+      <ion-item>
+        <ion-label>Server</ion-label><ion-input class="developer-input-server" type="text" [(ngModel)]="preferences.SERVER.server"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Port</ion-label><ion-input class="developer-input-port" type="number" [(ngModel)]="preferences.SERVER.port"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Protocol</ion-label><ion-input class="developer-input-protocol" type="text" [(ngModel)]="preferences.SERVER.protocol"></ion-input>
+      </ion-item>
+    </ion-item-group>
+  </ion-item-group>
+  <ion-item-group>
+    <ion-item-divider color="light">Language</ion-item-divider>
+    <ion-label>Use Spanish</ion-label>
+    <ion-toggle [checked]="spanishDefault" [(ngModel)]="useSpanish" (ionChange)="toggleLanguage()"></ion-toggle>
   </ion-item-group>
   <ion-item-group>
     <ion-item-divider color="light">Time Stamp Test</ion-item-divider>
@@ -29,5 +50,5 @@
       {{onSiteTimeStamp}}
     </ion-item>
   </ion-item-group>
-
+  <button ion-button block color="primary" (click)="updatePreferences()">Save</button>
 </ion-content>
