--- a/src/pages/work-order/work-order.html
+++ b/src/pages/work-order/work-order.html
@@ -24,7 +24,8 @@
         <span class="shift-number">{{selectedShift.updateShiftNumber()}}</span>
         <span class="shift-label">hours</span>:
         <!--<span class="shift-hours">{{workOrderForm.value.selected_shift.getShiftHours()+currentRepairHours}}</span>-->
-        <span class="shift-hours">{{selectedShift.getShiftHours()+currentRepairHours}}</span>
+        <span class="shift-hours" *ngIf="mode==='Add'">{{selectedShift.getShiftHours()+currentRepairHours}}</span>
+        <span class="shift-hours" *ngIf="mode==='Edit'">{{selectedShift.getShiftHours()+currentRepairHours-thisWorkOrderContribution}}</span>
         <span class="shift-label">of</span>
         <span class="shift-hours">{{techProfile.shiftLength}}</span>
       </span>
