--- a/src/pages/developer/developer.html
+++ b/src/pages/developer/developer.html
@@ -28,13 +28,13 @@
     <ion-item-group>
       <ion-item-divider color="light">Server Parameters</ion-item-divider>
       <ion-item>
-        <ion-label>Server</ion-label><ion-input class="developer-input-server" type="text" [(ngModel)]="prefs.SERVER.server"></ion-input>
+        <ion-label>Server</ion-label><ion-input class="developer-input-server" type="text" [(ngModel)]="prefs.getServer().server"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label>Port</ion-label><ion-input class="developer-input-port" type="number" [(ngModel)]="prefs.SERVER.port"></ion-input>
+        <ion-label>Port</ion-label><ion-input class="developer-input-port" type="number" [(ngModel)]="prefs.getServer().port"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label>Protocol</ion-label><ion-input class="developer-input-protocol" type="text" [(ngModel)]="prefs.SERVER.protocol"></ion-input>
+        <ion-label>Protocol</ion-label><ion-input class="developer-input-protocol" type="text" [(ngModel)]="prefs.getServer().protocol"></ion-input>
       </ion-item>
     </ion-item-group>
   </ion-item-group>
