--- a/src/pages/developer/developer.html
+++ b/src/pages/developer/developer.html
@@ -52,3 +52,4 @@
   </ion-item-group>
   <button ion-button block color="primary" (click)="updatePreferences()">Save</button>
 </ion-content>
+<onsite-tabs></onsite-tabs>
