--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -12,3 +12,4 @@
 <ion-content padding>
   <button ion-button color="secondary" class="logout-button"  (click)="confirmLogout()"> Logout </button>
 </ion-content>
+<onsite-tabs></onsite-tabs>
