--- a/src/pages/tech-settings/tech-settings.html
+++ b/src/pages/tech-settings/tech-settings.html
@@ -64,3 +64,4 @@
     <button type="submit" ion-button block color="favorite">Update {{title}} </button>
   </form>
 </ion-content>
+<onsite-tabs></onsite-tabs>
